--- a/football-prediction/src/App.css
+++ b/football-prediction/src/App.css
@@ -2,17 +2,13 @@
   text-align: center;
 }
 
-.same-line{
-  display: inline-block;
-}
-
 .container {
-  position: relative;
+
 }
 
 .h1 {
-  justify-content: center;
-  margin-left: 20.5%;
+  position: relative;
+  margin-right: 7%;
 }
 
 .line_under_header {
@@ -26,11 +22,13 @@
 }
 
 .App-logo {
-  height: 90px;
-  width: 90px;
+  height: 50px;
+  width: 50px;
+  margin-top: 0%;
+  margin-bottom: 0%;
   margin-right: 10px;
   margin-left: 10px;
-  position: absolute;
+  float: left;
 }
 
 .form1 {
@@ -45,7 +43,7 @@
 }
 
 .span1 {
-  position: absolute;
+  /*position: absolute;*/
   top: -58px;
   left: 50%;
   transform: translateX(-50%);
@@ -68,6 +66,7 @@
   display: inline-block;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
+  text-align: center;
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 4px;
