--- a/football-prediction/src/App.css
+++ b/football-prediction/src/App.css
@@ -3,12 +3,16 @@
 }
 
 .container {
-
+  background: rgb(55, 0, 60, 0.9);
+  position: relative;
 }
 
 .h1 {
   position: relative;
-  margin-right: 7%;
+  color: #fff;
+  font-size: 10.5mm;
+  font-family: PremierSans-Bold,Arial,Helvetica Neue,Helvetica,sans-serif;
+  font-weight: 400;
 }
 
 .line_under_header {
@@ -22,13 +26,36 @@
 }
 
 .App-logo {
-  height: 50px;
+  /*height: 50px;
   width: 50px;
   margin-top: 0%;
   margin-bottom: 0%;
   margin-right: 10px;
   margin-left: 10px;
-  float: left;
+  float: left;*/
+  background: #fff;
+  border-radius: 0px 500px 500px 0px;
+  display: block;
+  position: absolute;
+  transition: .2s;
+  bottom: -50%;
+  height: 200%;
+  width: 123px;
+  z-index: 30;
+}
+
+.team-logo {
+  height: 200px;
+  width: 200px;
+  margin: 0 140px;
+}
+
+.logos {
+  margin-top: 3%;
+  margin-bottom: 3%;
+  display: flex;
+  justify-content: center;
+
 }
 
 .form1 {
@@ -49,30 +76,53 @@
   transform: translateX(-50%);
 }
 
+.font {
+  font-family: PremierSans-Bold,Arial,Helvetica Neue,Helvetica,sans-serif;
+  font-weight: 400;
+}
+
 .input1 {
   border: none;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid rgb(55, 0, 60, 0.9);
   text-align: center;
-  font-size: medium;
+  font-size: x-large;
 }
 
 .season-button {
-  background-color: #fff;
+  background-color: rgb(55, 0, 60, 0.7);
   border: none;
-  color: #000;
+  color: rgb(255, 255, 255);
   padding: 10px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: PremierSans-Bold,Arial,Helvetica Neue,Helvetica,sans-serif;
+  font-weight: 400;
   font-size: 16px;
   text-align: center;
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 4px;
+} 
+
+.hovered {
+  background-color: rgb(55, 0, 60, 0.4);
 }
-.selected {
-  background-color: lightblue;
+
+.finalPredict {
+  background-color: rgb(243, 243, 243);
+  border-color: rgb(55, 0, 60, 0.9);
+  color: rgb(0, 0, 0);
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-family: PremierSans-Bold,Arial,Helvetica Neue,Helvetica,sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 4px;
 }
 /*.season-button:hover {
   background-color: #e6e6e6;
